ingress/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: default
  name: default-backend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: default-backend
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: default-backend
        image: gcr.io/google_containers/defaultbackend:1.0
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 5
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 10m
            memory: 20Mi
          requests:
            cpu: 10m
            memory: 20Mi
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: default-backend
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: default-backend
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: default
  name: nginx-ingress-controller
spec:
  replicas: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: nginx-ingress-lb
    spec:
      terminationGracePeriodSeconds: 60
      serviceAccount: nginx
      containers:
        - name: nginx-ingress-controller
          image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.24.1
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
          livenessProbe:
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 5
          args:
            - /nginx-ingress-controller
            - --default-backend-service=default/default-backend
            - --configmap=default/nginx-ingress-controller-conf
            - --v=2
          ports:
            - containerPort: 80
            - containerPort: 443
---
kind: Service
apiVersion: v1
metadata:
  namespace: default
  name: nginx-ingress-controller
spec:
  selector:
    app: nginx-ingress-lb
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - hostname: localhost
